vest-dsl/test/bad/size_expr_param_dependent.vest
// Invalid: parameter-dependent formats do not have a statically-known size
payload(@len: u16) = {
    body: [u8; @len],
}

bad = {
    body: [u8; |payload|],
}
